<resources>
    <string name="app_name">Del Vinho</string>
    <string name="Fulano">testo fulano</string>
    <string name="Logout">botao de logout</string>
    <string name="compras">Compras</string>
    <string name="relat_rio_por_m_s">Relatório por Mês</string>
    <string name="relatorio_por_cliente">Relatório por Cliente</string>
    <string name="vinhos">Vinhos</string>
    <string name="clientes">Clientes</string>
    <string name="menu">Menu</string>
    <string name="offline">Offline</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="lista_de_clientes">Lista de Clientes</string>
    <string name="cadastrar_novo_cliente">Cadastrar Novo Cliente</string>
    <string name="telefone">Telefone</string>
    <string name="salvar_cliente">Salvar Cliente</string>
    <string name="cpf_ou_cnpj">CPF ou CNPJ</string>
    <string name="nome">Nome</string>
    <string name="cadastrar_cliente">Cadastrar Cliente</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar_para_login">Voltar para Login</string>
    <string name="cpf">CPF</string>
    <string name="endere_o">Endereço</string>
    <string name="telefone1">Telefone</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="logo_do_aplicativo">Logo do aplicativo</string>
    <string name="cadastrar_novo_cliente1">Cadastrar Novo Cliente</string>
    <string name="lista_de_clientes1">Lista de Clientes</string>
    <string name="cadastrar_compra">Cadastrar Compra</string>
    <string name="valor_total_venda">Valor total da venda:</string>
    <string name="quantidade_vinhos">Quantidade de vinhos</string>
    <string name="voltar">Voltar</string>
    <string name="selecione_cliente">Selecionar cliente</string>
    <string name="selecione_vinho">Selecionar vinho</string>
    <string name="cadastrar_vinho">Cadastrar Vinho</string>
    <string name="nome_vinho">Nome do Vinho</string>
    <string name="tipo_vinho">Tipo de Vinho</string>
    <string name="safra_vinho">Safra do Vinho</string>
    <string name="preco_vinho">Preço do Vinho</string>
    <string name="estoque">Estoque</string>
    <string name="salva_vinho">Salvar Vinho</string>
    <string name="relatorio_mes">Relatórios por Mês</string>
    <string name="mes">Mês</string>
    <string name="ano">Ano</string>

    //UTILITARIOS
    <string name="ok">Ok</string>
    <string name='cancelar'>Cancelar</string>

    //PAGINA LOGIN
    <string name="incorreto">Email ou senha incorretos.</string>

    //CADASTRO USUARIO
    <string name="confirmarSenha">Confirmar senha</string>

    //MENU
    <string name="ola">Olá </string>

    //Formulario Clientes
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>

    //Itens clientes
    <string name="placeholderNomeCliente">Exemplo da Silva</string>
    <string name="placeholderEnderecoCliente">Criciúma/SC</string>
    <string name="placeholderCpfCnpjCliente">123.456.789-00</string>
    <string name="placeholderTelefoneCliente">(51)995459125</string>
    <string name="sem_clientes">Não há clientes cadastrados</string>

    //FORMULARIO VINHOS
    <string name="salvar_vinho">Salvar Vinho</string>
    <string name="sem_vinhos">Não há vinhos cadastrados</string>

    //Itens vinhos
    <string name="placeholderNomeVinho">Exemplo nome de vinho</string>
    <string name="placeholderTipoVinho">Rose</string>
    <string name="placeholderSafraVinho">10/2024</string>
    <string name="placeholderPrecoVinho">R$1234,00</string>
    <string name="placeholderEstoqueVinho">110</string>

    //Lista compras
    <string name="cadastrar_nova_compra">Cadastrar Nova Compra</string>
    <string name="sem_compras">Não há compras cadastradas</string>

    //Formulario Compras
    <string name="placeHolderValorTotal">R$00,00</string>
    <string name="data_venda">Data da venda</string>

    //Itens compras
    <string name="placeholderQtdVendidos">12</string>
    <string name="placeholderPrecoTotal">R$12347,00</string>
    <string name="placeholderData">10/10/2024</string>
    <string name="cadastrar_novo_vinho">Cadastrar Novo Vinho</string>
    <string name="formato_nome_do_vinho_safra_do_vinho_pre_o_unit_rio">Formato: Nome do Vinho - Safra do Vinho - Preço Unitário</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="logo_do_aplicativo1">Logo do aplicativo</string>
    <string name="entre_em_contato_com_a_pessoa_respons_vel_que_vai_ajudar_na_assist_ncia_da_troca_de_senha">Entre em contato com a pessoa responsável que vai ajudar na assistência da troca de senha</string>
    <string name="jo_o_da_silva">João da Silva</string>
    <string name="_55_9_9911_9911">(55) 9 9911.9911</string>
    <string name="voltar1">Voltar</string>
    <string name="lista_de_compras">Lista de Compras</string>
    <string name="lista_de_vinhos">Lista de Vinhos</string>
    <string name="entrar">Entrar</string>
    <string name="criar_uma_conta">Criar uma conta</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="editar">Editar</string>
    <string name="telefone2">Telefone</string>
    <string name="endere_o1">Endereço</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="nome_do_cliente1">Nome do Cliente</string>
</resources>