<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/clientNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_do_cliente1"
        android:textSize="18sp"
        android:textColor="@color/novoroxo"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/clientCpfCnpjTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpf_cnpj"
        android:textColor="@color/novoroxo" />

    <TextView
        android:id="@+id/clientAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endere_o1"
        android:textColor="@color/novoroxo" />

    <TextView
        android:id="@+id/clientPhoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone2"
        android:textColor="@color/novoroxo" />

    <Button
        android:id="@+id/editClientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:backgroundTint="@color/novoroxo"
        android:textColor="@color/branco"
        android:layout_gravity="end"
        android:layout_marginTop="8dp" />
</LinearLayout>
