<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/amarelo"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo_do_aplicativo"
        android:src="@drawable/mdsvinhoemhd" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/novoroxo"
        android:textColor="@color/novoroxo"
        android:textColorHint="@color/novoroxo"
        android:layout_marginTop="16dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:backgroundTint="@color/novoroxo"
        android:textColor="@color/novoroxo"
        android:textColorHint="@color/novoroxo"
        android:layout_marginTop="16dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone1"
        android:inputType="phone"
        android:backgroundTint="@color/novoroxo"
        android:textColor="@color/novoroxo"
        android:textColorHint="@color/novoroxo"
        android:layout_marginTop="16dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/endere_o"
        android:inputType="textPostalAddress"
        android:backgroundTint="@color/novoroxo"
        android:textColor="@color/novoroxo"
        android:textColorHint="@color/novoroxo"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/cpfEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpf"
        android:inputType="number"
        android:backgroundTint="@color/novoroxo"
        android:textColor="@color/novoroxo"
        android:textColorHint="@color/novoroxo"
        android:layout_marginTop="16dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:backgroundTint="@color/novoroxo"
        android:textColor="@color/white"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/backToLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar_para_login"
        android:background="@drawable/button_background"
        android:textColor="@color/novoroxo"
        android:layout_marginTop="24dp" />

</LinearLayout>
