<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/amarelo"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <Spinner
        android:id="@+id/clienteSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/novoroxo"
        android:minHeight="48dp"
        android:prompt="@string/selecione_cliente"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/vinhoSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/novoroxo"
        android:contentDescription="Formato: Nome do Vinho - Safra do Vinho - Preço Unitário"
        android:minHeight="48dp"
        android:prompt="@string/selecione_vinho"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/quantidadeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/novoroxo"
        android:hint="@string/quantidade_vinhos"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/novoroxo"
        android:textColorHint="@color/novoroxo" />

    <EditText
        android:id="@+id/dataVendaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/novoroxo"
        android:hint="@string/data_venda"
        android:inputType="none"
        android:focusable="false"
        android:minHeight="48dp"
        android:textColor="@color/novoroxo"
        android:textColorHint="@color/novoroxo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_total_venda"
            android:textColor="@color/novoroxo"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/valorTotalTextView"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolderValorTotal"
            android:textColor="@color/saldoPositivo"
            android:textSize="24sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/cadastrarCompraButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_compra"
        android:backgroundTint="@color/novoroxo"
        android:textColor="@color/branco"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/cancelarCompraButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:background="@drawable/button_background"
        android:textColor="@color/novoroxo"
        android:layout_marginTop="24dp" />

</LinearLayout>
