<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_margin="20dp"
    android:background="@drawable/botoesdomenu_background"
    android:weightSum="10">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="9">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nomeVinho"
                android:text="@string/placeholderNomeVinho"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textColor="@color/novoroxo"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tipoVinho"
                android:text="@string/placeholderTipoVinho"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textColor="@color/novoroxo"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/safraVinho"
                android:text="@string/placeholderSafraVinho"
                android:layout_weight="3"
                android:textColor="@color/novoroxo"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/precoVinho"
                android:text="@string/placeholderPrecoVinho"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textColor="@color/saldoPositivo"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/estoqueVinho"
                android:text="@string/placeholderEstoqueVinho"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textColor="@color/saldoNegativo"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/botaoEditar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:src="@drawable/iconeeditar"
        android:background="@color/transparente"
        android:scaleType="fitCenter"/>

</LinearLayout>