<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/amarelo">
    <ImageView
        android:id="@+id/setinha"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:src="@drawable/iconesetinha" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relatorio_mes"
        android:textSize="24sp"
        android:textColor="@color/novoroxo"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <Spinner
        android:id="@+id/selectMes"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/novoroxo"
        android:minHeight="48dp"
        android:prompt="@string/mes"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/selectAno"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/novoroxo"
        android:minHeight="48dp"
        android:prompt="@string/ano"
        android:spinnerMode="dropdown" />

    </LinearLayout>

    <ListView
        android:layout_marginTop="10dp"
        android:id="@+id/purchaseListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@color/novoroxo"
        android:dividerHeight="1dp" />

</LinearLayout>