<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarelo"
    android:orientation="vertical">

    <!-- espaço para a logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:contentDescription="Logo do aplicativo"
        android:src="@drawable/mdsvinhoemhd" />

    <!-- email -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/novoroxo"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/novoroxo"
        android:textColorHint="@color/novoroxo"
        android:textStyle="bold" />

    <!-- senha -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/novoroxo"
        android:hint="Senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/novoroxo"
        android:textColorHint="@color/novoroxo"
        android:textStyle="bold" />
    <CheckBox
        android:id="@+id/checkLembrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Lembrar meus dados"
        android:textColor="@color/novoroxo"/>

    <!-- botão de login -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:backgroundTint="@color/novoroxo"
        android:textColor="@color/branco"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- botão para criar uma conta -->
    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criar_uma_conta"
        android:background="@drawable/button_background"
        android:textColor="@color/novoroxo"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- botão de esqueceu a senha -->
    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/esqueceu_a_senha"
        android:textColor="@color/novoroxo"
        android:textStyle="bold" />

</LinearLayout>
